--- a/web.html
+++ b/web.html
@@ -185,7 +185,7 @@
                     let user = {
                         name: 'user',
                         pwEnc: pwEnc,
-                        email: 'your@email', //your@email //change to user's email
+                        email: 'your@email', //change to user's email
                     }
 
                     //token
