modify: es6 import

--- a/web.html
+++ b/web.html
@@ -169,7 +169,7 @@
                     //user
                     let user = {
                         name: 'user',
-                        pwEnc: pwEnc,
+                        pwEnc,
                         email: 'your@email', //change to user's email
                     }
 
